styles.css
/* Red: #DD4055 (primary)
Green: #1FAD9D (secondary)
Purple: #8783D1 (tertiary)
White: #ECEBF3
Black: #101119 */


header {
    background-color: #1FAD9D;
    color: #101119;
    border-radius: 10px;
    border-color: #1FAD9D;
}

body {
    background-color: #ECEBF3;
    color: #101119;
    text-align: center;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

button {
    background-color: #DD4055;
    font-style: bold;
    font-size: 16px;
    border: none;
    border-radius: 20px;
    border-color: #DD4055;
    height: 40px;
    margin: 20px;
}

footer {
    background-color: #8783D1;
    border-radius: 20px;
    border: none;
    color: #101119;
}

#logo {
    display: inline-block;
    width: 5%;
    height: auto;
    position: absolute;
    left: 20px;
    top: 15px;
}

#login {
    display: inline-block;
    width: 10%;
    height: 8%;
    background-color: #8783D1;
    position: absolute;
    right: 20px;
    top: 15px;
    border: solid;
    border-radius: 10px;
    border-color: #101119;
    font-weight: 400;
    border-width: 1.5px;
}

#header-nav {
    display: inline-block;
    list-style-type: none;
    margin: 0px;
    padding: 0px;
    font-weight: 400;
}

.nav-items {
    border-left: none;
    text-decoration: none;
    text-align: center;
    color: #101119;
    padding: 20px 20px;
}

#adopt {
    background-color: #B9F3EC;
}

#other-pets > img {
    border-radius: 50%;
}

#footer-nav {
    display: inline-block;
    position: absolute;
    right: 30px;
}

#footer-nav-items {
    list-style-type: none;
}

#footer-nav-items > li {
    text-align: right;
    font-size: 14px;
    font-weight: 400;
}

.footer-links {
    color: #101119;
}

#copyright {
    padding: 2px 10px;
}

#copyright > p {
    text-align: left;
    font-style: italic;
    font-size: 11px;
    font-weight: 500;
}

#address {
    display: inline-block;
    position: absolute;
    left: 30px;
}

#address-list {
    padding: 0px;
}

#address-list > li {
    list-style-type: none;
    text-align: left;
    font-size: 14px;
    font-weight: 500;
}

#donate {
    display: inline-block;
    margin: 40px 40px;
}

h3 {
    padding: 40px;
    width: 30%;
    height: auto;
    background-color: #1FAD9D;
    border-radius: 10px;
    margin: auto;
}


/*
https://www.w3schools.com/css/css3_images.asp#:~:text=Thumbnail-,Images,-Use%20the%20border*/

